--- a/b1.html
+++ b/b1.html
@@ -14,6 +14,7 @@
             <li><a href="#">features</a></li>
             <li><a href="#">How it works</a></li>
             <li><a href="#">Privacy</a></li>
+            <li><a href="#">Privacy</a></li>
         </ul>
         <div>
                 <a href="#" class="login-btn">log in</a>
@@ -24,7 +25,7 @@
        <div class="content">
         <h1 class="anim">Make <br> New riendes</h1>
         <p class="anim">Socially is a new social media plaform to make neew riends 
-            online in the world. new let's explore all it's amazing features</p>
+            online in the world. new let's explore all it's amazing features </p>
      <a href="#" class="btn anim">Join now</a>
 
        </div>
